--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -22,6 +22,8 @@
         android:id="@+id/info_tv_3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/ColorAccent"
+        android:backgroundTint="@color/ColorAccent"
         android:layout_marginStart="50dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="50dp"
@@ -45,6 +47,8 @@
         android:hint="E-mail"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/ColorTextHint"
+        android:textColor="@color/ColorAccent"
+        android:backgroundTint="@color/ColorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info_tv_3" />
@@ -58,6 +62,9 @@
         android:layout_marginEnd="50dp"
         android:ems="10"
         android:hint="Password"
+        android:textColorHint="@color/ColorTextHint"
+        android:textColor="@color/ColorAccent"
+        android:backgroundTint="@color/ColorAccent"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +82,8 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signin_scn_pass_et" />
+        app:layout_constraintTop_toBottomOf="@+id/signin_scn_pass_et"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Button
         android:id="@+id/signin_scn_signin_btn"
@@ -86,6 +94,7 @@
         android:layout_marginEnd="70dp"
         android:backgroundTint="@color/ColorAccent"
         android:text="SIGN IN"
+
         android:textColor="@color/ColorPrimary"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,6 +122,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Create a new account"
+            android:textColor="@color/ColorAccent"
             android:textAlignment="center"
             android:textSize="16sp" />
 
