--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -17,7 +17,9 @@
     <item
         android:id="@+id/menu_option"
         android:icon="@drawable/ic_menu"
-        app:showAsAction="always"
+        app:showAsAction="withText"
         android:title="TODO"
         tools:ignore="HardcodedText" />
+    <item android:id="@+id/menu_saved_chat"
+        android:title=""/>
 </menu>
