worked on home activity with menus to navigate through activity and application functionality.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -15,11 +15,10 @@
         android:title="TODO"
         tools:ignore="HardcodedText" />
     <item
-        android:id="@+id/menu_option"
-        android:icon="@drawable/ic_menu"
+        android:id="@+id/menu_saved_chat"
         app:showAsAction="withText"
-        android:title="TODO"
+        android:title="Saved chat"
         tools:ignore="HardcodedText" />
-    <item android:id="@+id/menu_saved_chat"
-        android:title=""/>
+    <item android:id="@+id/menu_feedback"
+        android:title="@string/feedback"/>
 </menu>
