--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -145,7 +145,7 @@
         android:layout_marginStart="222dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="50dp"
-        android:text="Show pasword"
+        android:text="@string/show_password"
         android:textColor="@color/ColorAccent"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
